Fixed alignment error

--- a/main.css
+++ b/main.css
@@ -29,7 +29,7 @@ input[type=range]{
 	min-width: 200px;
 }
 
-.table th{
+table.sliders th{
 	text-align: right;
 }
 .table td{
